<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context=".Store">


    <View
        android:id="@+id/cont_comp"
        style="@style/Container_components"

        android:background="#FFEB3B"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="16dp" />

    <View
        android:id="@+id/cont_img"
        style="@style/Container_img"

        android:layout_width="394dp"
        android:layout_height="202dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cont_comp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp" />

    <View
        android:id="@+id/view2"
        style="@style/Container_calc"
        android:layout_width="404dp"

        android:layout_height="163dp"
        android:layout_marginTop="168dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cont_img"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp" />

    <View
        android:id="@+id/view"
        style="@style/Container_calc"
        android:layout_width="320dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText

        style="@style/edit_search"
        android:layout_width="248dp"
        android:layout_height="32dp"
        android:drawableEnd="@drawable/baseline_search_24"
        app:layout_constraintBottom_toTopOf="@+id/txt_endereco"
        app:layout_constraintEnd_toEndOf="@+id/cont_comp"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toEndOf="@+id/img_store"
        app:layout_constraintTop_toTopOf="@+id/cont_comp"
        app:layout_constraintVertical_bias="0.153" />

    <ImageView

        android:id="@+id/img_store"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/baseline_storefront_24"
        app:layout_constraintBottom_toBottomOf="@+id/cont_comp"
        app:layout_constraintEnd_toEndOf="@+id/cont_comp"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="@+id/cont_comp"
        app:layout_constraintTop_toTopOf="@+id/cont_comp"
        app:layout_constraintVertical_bias="0.188"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingStart="10dp"
        android:text="Sell or Sell"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/img_store"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_endereco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_store"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/img_camisa"
        android:layout_width="137dp"
        android:layout_height="150dp"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="@+id/cont_img"
        app:layout_constraintEnd_toEndOf="@+id/cont_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cont_img"
        app:layout_constraintTop_toTopOf="@+id/cont_img"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="66dp"
        android:text="@string/Descricao"
        app:layout_constraintBottom_toBottomOf="@+id/cont_img"
        app:layout_constraintEnd_toEndOf="@+id/cont_img"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/img_camisa"
        app:layout_constraintTop_toBottomOf="@+id/cont_comp"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:textColor="@color/orange"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/cont_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_camisa"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:textColor="@color/blue3"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        app:layout_constraintBottom_toBottomOf="@+id/cont_img"
        app:layout_constraintEnd_toEndOf="@+id/cont_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_camisa"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.076" />

    <androidx.appcompat.widget.AppCompatButton

        style="@style/btn"
        android:layout_width="219dp"
        android:layout_height="38dp"
        android:layout_marginEnd="104dp"
        android:text="@string/btn_nome"
        app:layout_constraintBottom_toBottomOf="@+id/cont_img"
        app:layout_constraintEnd_toEndOf="@+id/cont_img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.193" />

    <EditText

        android:id="@+id/edit_imc_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Qual seu peso?"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/edit_imc_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Qual a sua altura?"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_imc_weight" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="20dp"
        android:id="@+id/btn_imc_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/view"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>